--- a/app/src/main/res/layout/fragment_add_task_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_task_dialog.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="400dp"
     android:layout_height="wrap_content"
     android:layout_marginVertical="50dp"
-    android:layout_marginHorizontal="20dp"
     android:orientation="vertical"
     tools:context=".fragments.AddTaskDialogFragment">
 
