--- a/app/src/main/res/layout/fragment_to_do_list.xml
+++ b/app/src/main/res/layout/fragment_to_do_list.xml
@@ -25,6 +25,14 @@
            android:layout_marginHorizontal="10dp"
            android:text="@string/create_new_task"/>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewTasks"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            tools:itemCount="50" />
+
 
     </LinearLayout>
 
