--- a/app/src/main/res/layout/fragment_to_do_list.xml
+++ b/app/src/main/res/layout/fragment_to_do_list.xml
@@ -24,6 +24,13 @@
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/create_new_task"/>
+        <Button
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:id="@+id/buttonCancelTask"
+           android:layout_marginTop="10dp"
+           android:layout_marginHorizontal="10dp"
+           android:text="@string/cancel"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewTasks"
