--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,8 +80,9 @@
         android:layout_height="10dp"/>
 
     <Button
+        android:id="@+id/buttonResetPassword"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="@string/forgot_your_password"/>
+        android:text="@string/forgot_your_password" />
 
 </LinearLayout>
